The driver code for the PWM output has been completed.

--- a/Software/6.Timer_PWM/BSP_TimerPWM/MDK-ARM/TimerPWM.uvprojx
+++ b/Software/6.Timer_PWM/BSP_TimerPWM/MDK-ARM/TimerPWM.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32H7A3xxQ</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;../Drivers/STM32H7xx_HAL_Driver/Inc;../Drivers/STM32H7xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32H7xx/Include;../Drivers/CMSIS/Include;..\User\Bsp\inc</IncludePath>
+              <IncludePath>../Core/Inc;../Drivers/STM32H7xx_HAL_Driver/Inc;../Drivers/STM32H7xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32H7xx/Include;../Drivers/CMSIS/Include;../User/Bsp/inc</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
