--- a/RT-Thread/1-begin/.settings/projcfg.ini
+++ b/RT-Thread/1-begin/.settings/projcfg.ini
@@ -1,5 +1,5 @@
 #RT-Thread Studio Project Configuration
-#Tue Mar 19 01:42:05 CST 2024
+#Tue Mar 19 13:03:39 CST 2024
 project_type=rtt
 chip_name=STM32H7A3ZITxQ
 cpu_name=None
@@ -17,6 +17,6 @@ tool_chain=gcc
 uart_name=uart3
 tx_pin_name=PD8
 rtt_nano_path=
-output_project_path=C\:/Users/ALanStewart/Documents/Project-H7A3ZI-Q/RT-Thread
+output_project_path=D\:\\Project-H7A3ZI-Q\\RT-Thread
 hardware_adapter=ST-LINK
 project_name=1-begin
